everything but overflow issue on second page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,12 @@ header {
     width: 100%;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9;
+    /* ie8 */
+}
 
 
 .bg-city {
